# ema-bench-nips-26

./: .gitattributes  Agent.md  README.md  README_zh.md  pyproject.toml
.github/workflows/: deploy-pages.yml
EmbodiedMAS/: ObjectDelete.csv  ObjectDictionary.csv  ObjectYoloDelete.csv  __init__.py  env_wrapper.py  llm_config.example.json  llm_config.py  observation.py
EmbodiedMAS/ExperimentRunning/: Automation_runner.py  CMAS_benchmark_runner.py  DMAS_benchmark_runner.py  DMAS_benchmark_runner_wo.py  SA_benchmark_runner.py  __init__.py  benchmark_tasks.json  llm_profiles.example.json
EmbodiedMAS/Human_Agent/: action_h.py  base_agent_h.py
EmbodiedMAS/Metric_Tool/: __init__.py  evaluation.py  llm_scene_timing.py  llm_token_evaluation.py  perception_evaluation.py
EmbodiedMAS/Only_Language-base_Agent/: action_ol.py  base_agent_only_language.py
EmbodiedMAS/VLM_Agent/: action_vlm.py  base_agent_vlm.py
EmbodiedMAS/prompt/: P0S_Global_Identity.txt  P0_Global_Identity.txt  P10VLM_Basic_Rules.txt  P10_Basic_Rules.txt  P1_Task_Description.txt  P2_Environment_Assumptions.txt  P3_Role_Definition.txt  P4_Coordination_Framework.txt  P5S_Decision_Guidance.txt  P5_Decision_Guidance.txt  P6S_Shared_Summary_Requirement.txt  P6_Shared_Summary_Requirement.txt  P7S_Observation_Space.txt  P7VLMS_Observation_Space.txt  P7VLM_Observation_Space.txt  P7VLS_Observation_Space.txt  P7VL_Observation_Space.txt  P7_Observation_Space.txt  P8VLM_Action_Space.txt  P8_Action_Space.txt  P9S_Execution_Format.txt  P9_Execution_Format.txt  __init__.py  prompt_assembler.py  verify_prompt.py
docs/: introduction.md
ema-bench-frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
ema-bench-frontend/src/: App.css  App.jsx  App.tsx  index.css  temp.jsx
examples/: capture_demo.py  demo_mas.py  demo_mas_demo.py  demo_mastest.py  demo_rl.py  demo_waterworld.py  memory.py  multilevel_parallel.py  query_navigation.py  readExr.py  spray_1_actor_971396dbbd45a32ae4a387b8b29f0762_depth.exr  utils.py  utils_main.py  voxel.py  waterworld_dummy.py
scripts/: generate_pb2.py  notify_wechat.py
src/tongsim/: __init__.py  logger.py  tongsim.py  version.py
src/tongsim_lite_protobuf/: arena_pb2.py  arena_pb2.pyi  arena_pb2_grpc.py  capture_pb2.py  capture_pb2.pyi  capture_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  demo_mas_pb2.py  demo_mas_pb2.pyi  demo_mas_pb2_grpc.py  demo_rl_pb2.py  demo_rl_pb2.pyi  demo_rl_pb2_grpc.py  embodied_mas_pb2.py  utils_pb2.py  (+10 more)
(+41 files in other folders)
